--- a/BlazorHypiness/BlazorHypiness.csproj
+++ b/BlazorHypiness/BlazorHypiness.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Title>Blazor Hypiness</Title>
   </PropertyGroup>
 
 
@@ -14,5 +15,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rc.1.23421.29" />
   </ItemGroup>
+
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="npm run buildCss" />
+  </Target>
 
 </Project>
