picked npm command out of dotnet prebuild

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: latest
       - run: npm install
+      - run: npm run buildCss
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
