renamed stretched layout to container stretched and added css file for it

--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /BlazorHypiness/wwwroot/styles/site.css
-/BlazorHypiness/Components/Layouts/StretchedLayout.razor.css
-/src/css/Components/Layouts/StretchedLayout.css
+/BlazorHypiness/Components/**/**.razor.css
